<resources>
    <string name="app_name">Quiz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="to_register">Don\'t have an account? Register here</string>
    <string name="to_login">Already have an account? Login here</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="next">Next</string>
    <string name="congrats">Congrats! Your score is: </string>
    <string name="restart">Restart</string>
    <string name="view_history">History</string>
    <string name="select">Select level</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
</resources>