<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".StartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/lavender">

        <ImageView
            android:id="@+id/history_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_history"
            android:contentDescription="@string/view_history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="8dp" />

        <TextView
            android:id="@+id/select_level_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@id/history_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/easy_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_lavender"
            android:text="@string/easy"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="128dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintTop_toBottomOf="@id/select_level_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/medium_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_lavender"
            android:text="@string/medium"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintTop_toBottomOf="@id/easy_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/hard_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_lavender"
            android:text="@string/hard"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintTop_toBottomOf="@id/medium_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>